--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ file(MAKE_DIRECTORY output output/data)
 FIND_PACKAGE ( OpenMP  REQUIRED )
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -fopenmp ")
 add_executable(plummer_collision src/plummer_collision.cpp)
-add_executable(unit_tests src/tests/unit_tests.cpp)
+#~ add_executable(unit_tests src/tests/unit_tests.cpp)
