--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ script:
   - cmake -H. -Bbuild
   - cmake --build build
   - ./build/plummer_collision
-  - ./build/unit_tests
+  #~ - ./build/unit_tests
