--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(particle_sim C CXX)
 include_directories(src)
 file(MAKE_DIRECTORY output output/data)
 FIND_PACKAGE ( OpenMP  REQUIRED )
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -fopenmp ")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -fopenmp -l boost_program_options ")
 add_executable(plummer_collision src/plummer_collision.cpp)
 #add_executable(unit_tests src/tests/unit_tests.cpp)
