--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,11 @@ include_directories(src/include/imgui/)
 find_package(OpenGL REQUIRED)
 FIND_PACKAGE ( OpenMP  REQUIRED )
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Ofast -std=c++11 -mtune=native -march=native -fopenmp -fsanitize=thread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Ofast -std=c++11 -mtune=native -march=native -fopenmp ") #-fsanitize=thread
 
 add_executable(
 	plummer_collision src/plummer_collision.cpp 
 	src/include/glad.c 
-	
 )
 
 target_link_libraries(plummer_collision glfw)
